# sandbox-forge-mcp

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml
docs/: CODING_STANDARDS.md  PROJECT_STRUCTURE.md  SETUP.md  index.html
examples/: README.md
examples/sample-workspace/: .sandboxforge.toml  Dockerfile  README.md  _run_sf_workflow.py  docker-compose.yml
examples/sample-workspace/app/: main.py  requirements.txt
scripts/: docker-deploy.sh
src/lima_mcp_server/: __init__.py  config.py  db.py  errors.py  keyword_scraper.py  runtime.py  server.py  service.py  sweeper.py  timeutil.py  workspace_config.py
src/lima_mcp_server/backend/: __init__.py  base.py  factory.py  hyperv.py  lima.py
tests/: test_backend.py  test_backend_factory.py  test_backend_hyperv.py  test_config.py  test_contract.py  test_db.py  test_integration.py  test_integration_hyperv.py  test_keyword_scraper.py  test_runtime_tasks.py  test_service.py  test_workspace_config.py
