[project]
name = "sandboxforge-mcp"
version = "0.1.0"
description = "SandboxForge MCP server backed by Lima"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.6.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
sandboxforge-mcp-server = "lima_mcp_server.server:main"
orbitforge-mcp-server = "lima_mcp_server.server:main"
lima-mcp-server = "lima_mcp_server.server:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lima_mcp_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
